# tyrannosaurus

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .scrutinizer.yaml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  CHANGES.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  NOTICE.md  README.md  SECURITY.md  Vagrantfile  azure-pipelines.yml  codemeta.json  environment.yaml  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  action-options.json  dependabot.yaml  dependabot.yml  labeler.yaml  labels.json  release.yaml  settings.yaml  settings.yml  types-to-labels.json
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  bug.yml  docs.yaml  documentation.md  documentation.yaml  documentation.yml  enhancement.md  enhancement.yaml  enhancement.yml  feature.md  feature.yaml  feature.yml  infrastructure.md  infrastructure.yaml  infrastructure.yml  performance.md  performance.yaml  performance.yml  question.md  question.yaml  question.yml  security.md  security.yaml  security.yml
.github/workflows/: build.yml  check.yml  checklinks.yml  checks.yml  codeql-analysis.yml  codeql.yml  commit.yml  deploy.yaml  labels.yml  notify.yaml  on-pull-label.yaml  on-pull-test.yaml  on-push-deploy.yaml  on-push-test.yaml  on-schedule-check.yaml  publish.yaml  publish.yml  pull-test.yml  pull.yaml  pull.yml  push-main.yml  push.yaml  release.yml  slack-notify.yaml  test-matrix.yaml  test-one.yaml  test.yaml
docs/: __init__.py  anaconda.rst  build.rst  conf.py  contents.rst  databases.rst  dev.rst  guide.md  guide.rst  index.md  index.rst  new.rst  ref.rst  requirements.txt  synchronization.rst  usage.rst
recipes/tyranno/: meta.yaml
recipes/tyrannosaurus/: meta.yaml
src/tyranno/: __init__.py  __main__.py  clean.py  cli.py  git.py  james.py  sync.py  wrapped_toml.py
src/tyranno/data/: trash.json
src/tyranno/model/: __init__.py  conda.py  context.py  status.py
tests/: __init__.py  test_clean.py  test_cli.py  test_conda.py  test_context.py  test_helpers.py  test_init.py  test_new.py  test_sync.py  test_update.py
tests/resources/fake/: pyproject.toml
tests/resources/fake/grayskull/: __init__.py
tyranno/: __init__.py  __main__.py  clean.py  cli.py  new.py  recipe.py  sync.py  update.py
tyranno/data/: trash.json
tyranno/model/: __init__.py  _wrapped_toml.py  conda.py  context.py  git.py  james.py  license.py  pypi.py  req.py  status.py
tyrannosaurus/: __init__.py  clean.py  cli.py  conda.py  context.py  enums.py  envs.py  generator.py  helpers.py  main.py  metadata.py  model.py  new.py  parser.py  recipes.py  services.py  sync.py  tyrannosaurus.py  update.py  utils.py
tyrannosaurus/resources/: $.github@settings.yml.txt  $dotgithub@action-options.json  $dotgithub@settings.yml.txt  $dottravis.yml  $pkg@__init__.py.txt  $pkg@cli.py.txt  $project@cli.py.txt  -coveralls.yml  CHANGELOG.md  CHANGELOG.md.txt  CITATION.cff  CITATION.cff.txt  CODEOWNERS.yml.txt  CONTRIBUTING.md  CONTRIBUTING.md.txt  Dockerfile.txt  README.md  README.md.txt  SECURITY.md  SECURITY.md.txt  azure-pipelines.yml  azure-pipelines.yml.txt  codemeta.json  codemeta.json.txt  docs@index.rst  docs@index.rst.txt  license_apache2.txt  license_cc0.txt  license_ccby.txt  license_ccbync.txt  license_gpl3.txt  license_lgpl3.txt  license_mit.txt  pyproject.toml.txt  recipes@pkg@meta.yaml.txt  tests@__init__.py.txt  tests@test_cli.py.txt  tox.ini
tyrannosaurus/resources/auto/: README.md
