[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.0", "coverage[toml]"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "grayskull"
version = "0.8.1"
description = "A mock project."
authors = ["Fake Person"]
maintainers = ["Fake Person"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["python", "template", "pyproject-toml", "python-poetry", "conda-build"]
homepage = "https://github.com/fakeorg/fake"
repository = "https://github.com/fakeorg/fake"
documentation = "https://fake.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
ci = "https://github.com/fakeorg/fake/actions"
issues = "https://github.com/fakeorg/fake/issues"
source = "https://github.com/fakeorg/fake"
download = "https://pypi.org/project/fake/"


#########################################################################################
# fake
#########################################################################################

[tool.tyrannosaurus.options]
align    = true

[tool.tyrannosaurus.sources]
# use a literal value ('') or refer to a pyproject setting
# ${today} is the date you run it at, and ${now} is the datetime
status             = "'Development'"
date               = "'${today}'"
copyright          = "'Copyright ${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
# comma-separated
maintainers        = "'fakeorg'"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/${name}/meta.yaml'"

[tool.tyrannosaurus.targets]
# these are file and directory names, without filename extensions
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = false
authors      = false
github       = false
travis       = false
dockerfile   = false
readme       = false
changelog    = false

#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = ">=3.7, <4"
tomlkit                  = "^0.6.0"
importlib-metadata       = "^1.6"
typer                    = "^0.2"
requests                 = "^2.23"
grayskull                = "^0.4"

[tool.poetry.dev-dependencies]
pre-commit               = "^2.3"
pytest                   = "^5.4"
coverage                 = {extras = ["toml"], version = "^5.1"}
pytest-cov               = "^2.8"
sphinx                   = "^3.0"
sphinx-autoapi           = "^1.3"
sphinx-rtd-theme         = "^0.4.3"
mypy                     = "^0.750"
flake8                   = "^3.7"
flake8-docstrings        = "^1.5"
black                    = "=19.10b0"
sphinx-autodoc-typehints = "^1.10"
xdoctest                 = "^0.12"
hypothesis               = "^5.10"
flake8-bugbear           = "^20.1"


[tool.poetry.extras]
# manually listed
docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi"]
# auto-filled from dev-deps
dev     = [
        "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
        "mypy",
        "flake8", "flake8-docstrings", "flake8-bugbear",
        "black",
]


#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["fake"]

[tool.coverage.run]
source = ["fake"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py37", "py38"]

[tool.isort]
line_length = 100
[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
