[metadata]
description-file = "README.md"

[build-system]
requires = ["poetry>=1.1,<2", "virtualenv==20.0.33", "wheel>=0.36,<1.0"]
build-backend = "poetry.masonry.api"


#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "grayskull"
version = "1.4.0"
description = "A mock project."
authors = ["Fake Person"]
maintainers = ["Fake Person"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["python", "template", "pyproject-toml", "python-poetry", "conda-build"]
homepage = "https://github.com/fakeorg/fake"
repository = "https://github.com/fakeorg/fake"
documentation = "https://fake.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha"
]
include = [
    "README.md",
    "LICENSE.txt",
    "CHANGELOG.md"
]

[tool.poetry.urls]
CI = "https://github.com/fakeorg/fake/actions"
Issues = "https://github.com/fakeorg/fake/issues"
Download = "https://pypi.org/project/fake/"


#########################################################################################
# fake
#########################################################################################

[tool.tyrannosaurus.options]
align    = true
sort     = false

[tool.tyrannosaurus.sources]
# use a literal value ('') or refer to a pyproject setting
# $${today} is the date you run it at, and $${now} is the datetime
status             = "'Development'"
date               = "'$${today}'"
copyright          = "'Copyright $${today.year}'"
version            = "tool.poetry.version"
release            = "tool.poetry.version"
pyversions         = "tool.poetry.dependencies"
devdeps            = "tool.poetry.dev-dependencies"
linelength         = "tool.black.line-length"
# comma-separated
maintainers        = "'fakeorg'"

[tool.tyrannosuarus.paths]
recipe             = "'recipes/$${name}/meta.yaml'"

[tool.tyrannosaurus.targets]
# these are file and directory names, without filename extensions
pyproject    = true
init         = true
tox          = true
docs         = true
recipes      = true
license      = false
authors      = false
github       = false
travis       = false
dockerfile   = false
readme       = false
changelog    = false

#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python                   = ">=3.8, <4"
tomlkit                  = "^0.10"
typer                    = "^0.5"
requests                 = "^2.23"

[tool.poetry.dev-dependencies]
pytest               = "=7.1.1"

[tool.poetry.extras]

#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["fake"]

[tool.coverage.run]
source = ["fake"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py37", "py38"]

[tool.isort]
line_length = 100

[mypy]
check_untyped_defs = true
strict_optional = true

[pycodestyle]
max-line-length = 100
statistics = true

[pydocstyle]
# 212 and 213 contradict; 203 and 204 contradict; D302 is not relevant in Py3
ignore = ["D203", "D212", "D302"]
